tests/NormalTests/paczka1/small_fuzzy/35931199.err
Error in line 1: A141 A41 48,0
Error in line 5: A141 A141 95,3
Error in line 11: ODGW A41 33,4
Error in line 14: ODGW S55 74,8
